# lp-transformation

./: .gitignore  README.md  autoresearch.bat  autoresearch.checks.bat  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.md  autoresearch.sh  pyproject.toml  requirements.txt  run_gpu_bench.sh
.github/workflows/: test.yml
benchmarks/: bench_fast_numpy.py  benchmark_runner.py  colab_benchmark.py  compare_algorithms.py  confirm_filter.py  investigate_48.py  optimize_pipeline.py  profile_irprop_iters.py  profile_numba.py  run_benchmark.py  run_checks.py  run_comprehensive.py  run_comprehensive_gpu.py  test_gradtol.py  test_numba.py
colab/: README.md  colab_exec.py  colab_runner.sh  setup_colab.ipynb
data/: optimisation_12_layer_solutions.csv  optimisation_48_layer_solutions.csv  viquerat_12_layer_solutions.csv  viquerat_12_layer_solutions_complete.csv
src/: __init__.py  analytical_solver.py  bench_cupy_lp.py  bench_gpu_lp.py  bench_gpu_solver.py  bench_slang_lp.py  gpu_48layer.py  gpu_full_discovery.py  gpu_hybrid_solver.py  gpu_irprop.py  gpu_lp.py  gpu_pipeline_opt.py  gpu_viquerat_discovery.py  lp_compute.slang  lp_functions.py  numba_solver.py  numpy_fast.py  numpy_solver.py  paper_solver.py  slang_solver.py  test_cases.py  test_gpu_48.py  test_slang.py  test_slang2.py  test_slang3.py  test_slang_lp.py  test_wgpu.py  utils.py
tests/: conftest.py  test_accuracy.py  test_lp_functions.py  test_paper_validation.py  test_solver_numpy.py
